MDEV-12972 Random and Frequent Segfault

Problem was a memory overflow in MRR

Reviewed by Sergei Petruna. Testcase by Elena